2007-12-11  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.c (gimp_wire_register): allocate
	GimpWireHandler structs using GSlice.

2007-12-11  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.c (_gimp_read_read_string): NULL-terminate
	all strings coming in over the wire protocol. Should help with bug
	#498207.
	(gimp_wire_register): 

2007-12-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c (pygimp_set_background)
	(pygimp_set_foreground): allow the use of CSS color names and
	hexadecimal color notation.

2007-12-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpheal.c: make the healing brush work properly
	when dragged.  Fixes bug #492575.

2007-12-09  Hans Breuer  <hans@breuer.org>

	* app/gimp-log.h : an ugly but working variant for no varargs macros
	
	* app/base/base-utils.c(get_physical_memory_size) : fallback to
	GetMemoryStatus() for older compiler/sdk
	
	* app/core/gimplayer-floating-sel.c : second argument to g_set_error()
	is an uint32, not a pointer

	* **/makefile.msc : updated and removed -GD to let msvc9 complain less

2007-12-09  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.[ch]: Added
	gimp_rectangle_tool_init() (and minor code cleanup).

	* app/tools/gimprectangleselecttool.c
	(gimp_rect_select_tool_init): Call gimp_rectangle_tool_init().

	* app/tools/gimpcroptool.c
	(gimp_crop_tool_init): Call gimp_rectangle_tool_init().

2007-12-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py (_run): fixed logic that decides if a
	dialog should be shown or not.

2007-12-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpimage-snap.c: fix typo in previous commit.

2007-12-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-draw.c: draw grid correctly when
	non-integer spacing is combined with a large offset.  Fixes
	bug #502374.

	* app/core/gimpimage-snap.c: make snapping to grid work when
	coord is less than the grid offset.